Updated GitHub links.

--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 	<footer>
 		<div class="credits text-center">
 			<p>
-				<a href="http://githublink.com">View source on GitHub!</a>
+				<a href="https://github.com/zackrzot/tsk">View source on GitHub!</a>
 			</p>
 			<p>
 				<a href="http://zackrzot.com">zackrzot.com</a>
