--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>tsk</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
     <style type="text/css">
         body {
             padding-top: 10px;
