--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -4,15 +4,16 @@
     <meta charset="utf-8" />
     <title>tsk</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<link href="/public/css/cover.css" rel="stylesheet">
 	<link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
     <style type="text/css">
         body {
-            padding-top: 10px;
+            padding-top: 100px;
 			padding-left: 10px;
         }
 
         .form-container {
-            width: 400px;
+            width: 210px;
             margin: auto;
         }
 
@@ -23,3 +24,4 @@
         }
     </style>
 	<img src="\public\img\tsk.png" alt="tsk">
+	<p><i>tsk is a FREE ToDo app that you will use as much as the paid ones, as in never!</i><p>
