Added views for different task page filters. Implemented delet all tasks.

--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -25,6 +25,8 @@
 				</div>
 			</form>
 		</div>
+		
+		<p><b> Demo Account: </b><br> Username: user <br> Password: pass </p>
 
 <%- include('partials/footer') %>
 
