--- a/app/app-content/app.css
+++ b/app/app-content/app.css
@@ -40,7 +40,13 @@ header {
 	position:relative;
 	min-height:100%;
 	min-width:100%;
-	
+}
+
+.task-item-manage{
+	cellpadding: 20px;
+	position:relative;
+	min-height:100%;
+	min-width:100%;
 }
 
 .titleLabel{
@@ -50,9 +56,11 @@ header {
 }
 
 .btn-sm{
-	
 	min-width:150px;
-	
+}
+
+.search{
+	color: #004b5d;
 }
 
 .list-group-item-active-task {
@@ -68,4 +76,44 @@ header {
 .list-group-item-completed-task {
 	color: #ffffff;
     background-color: #00310b;
+}
+
+.dynamic-container {
+	background:#004b5d;
+	border:1px solid black;
+	list-style:none;
+	margin:0;
+	padding:0 10px;
+}
+
+.animate-repeat {
+	border:1px solid black;
+	line-height:30px;
+	list-style:none;
+	box-sizing:border-box;
+}
+
+.manage-task-td {
+	padding-right:10px;
+	padding-left:10px;
+}
+
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter,
+.animate-repeat.ng-leave {
+	transition:all linear 0.5s;
+}
+
+.animate-repeat.ng-leave.ng-leave-active,
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter {
+	opacity:0;
+	max-height:0;
+}
+
+.animate-repeat.ng-leave,
+.animate-repeat.ng-move.ng-move-active,
+.animate-repeat.ng-enter.ng-enter-active {
+	opacity:1;
+	max-height:30px;
 }
